added epic default subs

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,1 +1,11 @@
 osc=no
+ytdl-format=bestvideo[height<=?1080]+bestaudio/best
+sub-font='Arial'
+sub-font-size=45
+sub-border-size=1.5
+sub-pos=97
+sub-blur=0.3
+screenshot-directory=/home/shaka/Pictures/Screenshots/
+brightness=4
+contrast=-4
+saturation=5
