a lot of changes

--- a/flameshot/flameshot.ini
+++ b/flameshot/flameshot.ini
@@ -6,7 +6,7 @@ disabledTrayIcon=true
 drawColor=#ff0000
 drawThickness=0
 saveAfterCopyPath=/home/shaka/Pictures
-savePath=.png
+savePath=/home/shaka/Pictures/Screenshots
 savePathFixed=false
 showHelp=false
 showStartupLaunchMessage=true
