added cinnamon config

--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -5,3 +5,11 @@ ALT+k add sub-scale +0.1
 
 # decrease subtitle font size
 ALT+j add sub-scale -0.1
+
+#switch audio streams
+k cycle audio
+K cycle audio down
+
+#change volume
+UP 		add volume 2
+DOWN 	add volume -2
