--- a/waybar/config
+++ b/waybar/config
@@ -32,15 +32,17 @@
         "spacing": 10
     },
     "clock": {
-        "format": "{:%a %d %b - %I:%M}",
+        "format": "{:%a %d %b - %I:%M %p}",
 	"tooltip": false,
     },
     "cpu": {
         "format": "{usage}% ",
-        "tooltip": false
+        "tooltip": false,
+        "interval": 3,
     },
     "memory": {
-        "format": "{}% "
+        "format": "{}% ",
+        "interval": 3,
     },
     "temperature": {
         // "thermal-zone": 2,
@@ -76,7 +78,10 @@
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": "{essid} ({signalStrength}%) ",
         "format-linked": "{ifname} (No IP) ",
-        "format-ethernet": "{ifname} ",
+        "format-ethernet": " {bandwidthDownBits}",
+  //    "format-ethernet": "D: {bandwidthDownBits} | U: {bandwidthUpBits}",
+    //  "format-ethernet": "{ifname} ",
+        "interval": 3,
     //  "format-ethernet": "{ifname}: {ipaddr}{cidr} ",
         "format-disconnected": "Disconnected ⚠",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
@@ -84,8 +89,8 @@
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
         "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
+        // "format-bluetooth": "{volume}% {icon} {format_source}",
+        // "format-bluetooth-muted": " {icon} {format_source}",
         "format-muted": " {format_source}",
         "format-source": "{volume}% ",
         "format-source-muted": "",
