big changed in waybar and sway

--- a/mpv/script-opts/mpv_crop_script.conf
+++ b/mpv/script-opts/mpv_crop_script.conf
@@ -1,1 +1,1 @@
-output_template=/home/shaka/Pictures/mpv_screenshots/${filename} ${#pos:%02h.%02m.%06.3s} ${!full:${crop_w}x${crop_h} ${%unique:%03d}}.png
+output_template=/home/shaka/Pictures/mpv_screenshots/${filename} ${ext} ${#pos:%02h.%02m.%06.3s} ${!full:${crop_w}x${crop_h} ${%unique:%03d}}.png
