--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -117,7 +117,7 @@ font:
     # family: UbuntuMono Nerd Font
     # family: Monofur Nerd Font
     # family: TerminessTTF Nerd Font
-    family: Monospace
+    family: MesloLGS NF
 
     # The `style` can be specified to pick a specific face.
     style: Regular
