a lot of changes in sway

--- a/mpv/script-opts/webtorrent-hook.conf
+++ b/mpv/script-opts/webtorrent-hook.conf
@@ -6,4 +6,4 @@ download_directory=/mnt/odin/torrents
 # obvious; don't use --quiet, --mpv, etc.)
 webtorrent_flags=["--blocklist", "<blocklist url>"]
 show_speed=yes
-remember_directory=/tmp/webtorrent-remember
+remember_directory=/home/shaka/.cache/webtorrent-remember
