--- a/sway/config
+++ b/sway/config
@@ -2,9 +2,13 @@
 gaps inner 10 
 gaps outer 5 
 
-default_border pixel 6 #disable windows titlebar
+default_border pixel 2 #disable windows titlebar
+default_floating_border pixel 2 #disable floating windows titlebar
 
-font pango: SourceCodePro Medium 12
+#Font
+font pango:DejaVu Sans Mono 11
+#align  title
+title_align center
 
 # class                 border  backgr. text    indicator child_border
 client.focused          #0039e6 #285577 #ffffff #2e9ef4   #0039e6
@@ -13,14 +17,18 @@ client.unfocused        #333333 #222222 #888888 #292d2e   #222222
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
-client.background       #ffffff
+#client.background       #ffffff            #its ignored by sway anyway lol
+
+#Importing the gtk,icon, and cursor themes:
+#also fixes copyq XD (sometimes)
+exec_always import-gsettings
 
 #xorg support
 xwayland enable
 
 #disable focus follows mouse cursor
 
-focus_follows_mouse no
+focus_follows_mouse yes
 
 ### Variables
 # Logo key. Use Mod1 for Alt.
@@ -33,7 +41,7 @@ set $right l
 
 #Set variables here:
 
-set $filemanager pcmanfm
+set $filemanager pcmanfm     #for wayland support use pcmanfm-qt
 set $browser brave
 set $term alacritty
 set $mediaplayer alacritty -e ncspot
@@ -42,7 +50,7 @@ set $mail mailspring
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu rofi -show run
+set $menu wofi --show drun -i | xargs swaymsg exec --
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
@@ -238,7 +246,7 @@ bindsym $mod+F3 exec playerctl play-pause
 bindsym Control+Alt+w exec $browser
 bindsym Control+Alt+b exec $filemanager 
 bindsym Control+Alt+m exec $mail 
-bindsym Control+Alt+s exec $mediaplayer 
+bindsym Control+Alt+s exec $mediaplayer
 bindsym Control+Alt+d exec discord 
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +2%       #increase audio 
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -2%       #decrease audio
@@ -266,8 +274,9 @@ bindsym --release --border --whole-window button8 workspace prev
 
 #exec_always --no-startup-id copyq;
 #exec_always --no-startup-id indicator-sound-switcher;
-exec --no-startup-id env QT_QPA_PLATFORM=xcb copyq;
+exec_always --no-startup-id env QT_QPA_PLATFORM=xcb copyq;
 exec --no-startup-id gammastep-indicator
+exec --no-startup-id xhost +SI:localuser:root           #fix cannot open display: :0 error
 
 #Start window in floating mode
 for_window [class="copyq"] floating enable
