added wallpaper picker & output switcher & alot of changes in mpv

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,17 +1,69 @@
+# general
 osc=no
-ytdl-format=bestvideo[height<=?1080]+bestaudio/best
-sub-font='Arial'
-sub-font-size=45
-sub-border-size=1.5
-sub-pos=97
-sub-blur=0.3
-screenshot-directory=/home/shaka/Pictures/Screenshots/
-brightness=4
-contrast=-4
-saturation=5
-alang=jpn
-slang=eng
 hwdec=auto
 volume=80
+
+## screenshot
+screenshot-format=png
+screenshot-high-bit-depth=yes
+screenshot-tag-colorspace=yes
+screenshot-directory=/home/shaka/Pictures/Screenshots/
+screenshot-png-compression=9
+
+
+## yt-dlp
 #enable yt-dlp hehe
 script-opts=ytdl_hook-ytdl_path=yt-dlp
+hls-bitrate=max
+ytdl-format=bestvideo[height<=?1080]+bestaudio/bestvideo+bestaudio/best
+load-unsafe-playlists=no
+
+
+## priority
+alang=ja,jp,jap,jpn,Japanese,en,eng,enUS,en-US,English
+slang=ja,jp,jap,jpn,Japanese,en,eng,enUS,en-US,English
+
+
+## subs
+sub-ass-override=no
+sub-font='Cera Pro'
+sub-blur=0.2
+sub-color='#FFFFFA'
+sub-border-color='#202020'
+sub-border-size=3
+sub-bold
+sub-spacing=0.5
+sub-align-x=center
+#sub-margin-x=180
+sub-margin-y=55
+sub-font-size=40
+demuxer-mkv-subtitle-preroll=yes
+sub-ass-vsfilter-blur-compat=no
+sub-fix-timing=yes
+#sub-auto=fuzzy
+#blend-subtitles=yes
+
+
+[ww-ext-image]
+image-display-duration=inf
+loop-file=inf
+loop-playlist=inf
+force-window=immediate
+video-aspect-override=no
+
+[extension.bmp]
+profile=ww-ext-image
+[extension.gif]
+profile=ww-ext-image
+[extension.jpeg]
+profile=ww-ext-image
+[extension.jpg]
+profile=ww-ext-image
+[extension.png]
+profile=ww-ext-image
+[extension.tif]
+profile=ww-ext-image
+[extension.tiff]
+profile=ww-ext-image
+[extension.webp]
+profile=ww-ext-image
