--- a/sway/config
+++ b/sway/config
@@ -54,7 +54,7 @@ set $menu wofi --show drun -i | xargs swaymsg exec --
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /home/shaka/Pictures/Wallpapers/3.png fill
+output * bg ~/Pictures/Wallpapers/wallpaper fill
 #
 # Example configuration:
 #
@@ -196,8 +196,7 @@ input * accel_profile flat
     bindsym $mod+a focus parent
 #
 # Scratchpad:
-#
-    # Sway has a "scratchpad", which is a bag of holding for windows.
+# # Sway has a "scratchpad", which is a bag of holding for windows.
     # You can send windows there and get them back later.
 
     # Move the currently focused window to the scratchpad
@@ -247,7 +246,7 @@ bindsym Control+Alt+w exec $browser
 bindsym Control+Alt+b exec $filemanager 
 bindsym Control+Alt+m exec $mail 
 bindsym Control+Alt+s exec $mediaplayer
-bindsym Control+Alt+d exec discord 
+bindsym Control+Alt+d exec discord-canary
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +2%       #increase audio 
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -2%       #decrease audio
 #bindsym $mod+Shift+$down exec pamixer -d 2          #decrease audio 
@@ -259,8 +258,10 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 bindsym XF86AudioStop exec playerctl stop
 #scripts
-bindsym Alt+f exec /home/shaka/scripts/mpv.sh 
-bindsym Alt+m exec /home/shaka/scripts/rclone.sh
+bindsym $mod+p exec ~/.config/sway/wallpaper.sh
+bindsym $mod+o exec ~/.config/sway/audio_output.sh
+bindsym Alt+f exec ~/scripts/mpv.sh 
+bindsym Alt+m exec ~/scripts/rclone.sh
 #Screenshot bebe
 bindsym Control+Shift+s exec grim -g "$(slurp)" - | swappy -f - 
 bindsym $mod+Shift+s exec grimshot --notify copy area
