--- a/sway/config
+++ b/sway/config
@@ -277,7 +277,8 @@ bindsym --release --border --whole-window button8 workspace prev
 #exec_always --no-startup-id indicator-sound-switcher;
 exec_always --no-startup-id env QT_QPA_PLATFORM=xcb copyq;
 exec --no-startup-id gammastep-indicator
-exec --no-startup-id xhost +SI:localuser:root           #fix cannot open display: :0 error
+exec --no-startup-id xhost +SI:localuser:root          #fix cannot open display: :0 error
+exec --no-startup-id xrdb -merge ~/.Xdefaults          #use colours and font from Xdefaults ( for sxiv and other apps )
 
 #Start window in floating mode
 for_window [class="copyq"] floating enable
