made epic nvim & zsh config

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -21,7 +21,7 @@ load-unsafe-playlists=no
 
 ## priority
 alang=ja,jp,jap,jpn,Japanese,en,eng,enUS,en-US,English
-slang=ja,jp,jap,jpn,Japanese,en,eng,enUS,en-US,English
+slang=en,eng,enUS,en-US,English,ja,jp,jap,jpn,Japanese
 
 
 ## subs
