--- a/waybar/config
+++ b/waybar/config
@@ -76,7 +76,7 @@
         "bat": "BAT2"
     },
     "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
+    //  "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": " {bandwidthDownBits} | ︁ {bandwidthUpBits}",
         "format-linked": "{ifname} (No IP) ",
         "format-ethernet": " {bandwidthDownBits} | ︁ {bandwidthUpBits}",
@@ -84,8 +84,8 @@
     //  "format-ethernet": "{ifname}: {ipaddr}{cidr} ",
         "format-disconnected": "Disconnected ⚠",
     //  "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-alt": "{essid} ({signalStrength}%) ",
-    //  "format-alt": "{ifname}: {ipaddr}/{cidr}"
+    //  "format-alt": "{essid} ({signalStrength}%) ",
+        "format-alt": "{ifname}: {ipaddr}{cidr} "
 
     },
     "pulseaudio": {
