--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -15,7 +15,7 @@ screenshot-png-compression=9
 #enable yt-dlp hehe
 script-opts=ytdl_hook-ytdl_path=yt-dlp
 hls-bitrate=max
-ytdl-format=bestvideo[height<=?1080]+bestaudio/bestvideo+bestaudio/best
+ytdl-format=bestvideo[height<=?1080][vcodec!=vp9]+bestaudio/bestvideo+bestaudio/best
 load-unsafe-playlists=no
 
 
