--- a/sway/config
+++ b/sway/config
@@ -21,8 +21,8 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 #Importing the gtk,icon, and cursor themes:
 #also fixes copyq XD (sometimes)
-exec_always ~/.config/sway/import-gsettings
-
+exec ~/.config/sway/import-gsettings
+exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 #xorg support
 xwayland enable
 
@@ -272,6 +272,9 @@ bindsym Control+Shift+s exec grim -g "$(slurp)" - | swappy -f -
 bindsym $mod+Shift+s exec grimshot --notify copy area
 bindsym Control+Print exec grimshot --notify copy screen
 bindsym Print exec grimshot --notify save screen 
+#Record
+bindsym F12 exec ~/.config/sway/record.sh -s
+bindsym $mod+F12 exec ~/.config/sway/record.sh -g
 #mouse keybindings
 #bindsym [--release] [--border] [--whole-window] [--exclude-titlebar] [<Modifiers>+]button<n> command
 bindsym --release --border --whole-window button9 workspace next 
@@ -281,7 +284,7 @@ bindsym --release --border --whole-window button8 workspace prev
 #exec_always --no-startup-id copyq;
 #exec_always --no-startup-id indicator-sound-switcher;
 exec_always --no-startup-id env QT_QPA_PLATFORM=xcb copyq
-exec --no-startup-id gammastep-indicator
+#exec --no-startup-id gammastep-indicator
 exec --no-startup-id xhost +SI:localuser:root          #fix cannot open display: :0 error
 exec --no-startup-id xrdb -merge ~/.Xdefaults          #use colours and font from Xdefaults ( for sxiv and other apps )
 
