--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -117,7 +117,8 @@ font:
     # family: UbuntuMono Nerd Font
     # family: Monofur Nerd Font
     # family: TerminessTTF Nerd Font
-    family: MesloLGS NF
+    #family: MesloLGS NF
+    family: Monospace
 
     # The `style` can be specified to pick a specific face.
     style: Regular
