--- a/mpv/script-opts/webtorrent-hook.conf
+++ b/mpv/script-opts/webtorrent-hook.conf
@@ -1,9 +1,9 @@
 close_webtorrent=yes
 remove_files=yes
 # change download directory
-download_directory=/mnt/odin/torrents
+download_directory=~/.cache/webtorrent
 # do not use --out, --keep-streaming, --port or most other flags (should be
 # obvious; don't use --quiet, --mpv, etc.)
 webtorrent_flags=["--blocklist", "<blocklist url>"]
 show_speed=yes
-remember_directory=/home/shaka/.cache/webtorrent-remember
+remember_directory=~/.cache/webtorrent
