fixed copyq floating issue

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -2,14 +2,15 @@
 osc=no
 hwdec=auto
 volume=80
+volume-max=100
+
 
 ## screenshot
 screenshot-format=png
 screenshot-high-bit-depth=yes
 screenshot-tag-colorspace=yes
 screenshot-directory=/home/shaka/Pictures/Screenshots/
-screenshot-png-compression=9
-
+screenshot-png-compression=3
 
 ## yt-dlp
 #enable yt-dlp hehe
