--- a/sway/config
+++ b/sway/config
@@ -22,7 +22,8 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 #Importing the gtk,icon, and cursor themes:
 #also fixes copyq XD (sometimes)
 exec ~/.config/sway/import-gsettings
-exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+#exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 #xorg support
 xwayland enable
 
@@ -250,7 +251,7 @@ bindsym Control+Alt+w exec $browser
 bindsym Control+Alt+b exec $filemanager 
 bindsym Control+Alt+m exec $mail 
 bindsym Control+Alt+s exec $mediaplayer
-bindsym Control+Alt+d exec discord-canary
+#bindsym Control+Alt+d exec discord-canary
 bindsym XF86AudioRaiseVolume exec amixer set Master 2%+            #increase audio 
 #bindsym $mod+Shift+$down exec amixer set Master 2%-       #decrease audio
 #bindsym $mod+Shift+$up exec amixer set Master 2%+            #increase audio 
@@ -291,12 +292,15 @@ bindsym --release --border --whole-window button9 workspace next
 bindsym --release --border --whole-window button8 workspace prev 
 #Startup Apps
 
-#exec_always --no-startup-id copyq;
-#exec_always --no-startup-id indicator-sound-switcher;
-exec_always --no-startup-id env QT_QPA_PLATFORM=xcb copyq
+exec_always --no-startup-id copyq
 #exec --no-startup-id gammastep-indicator
-exec --no-startup-id xhost +SI:localuser:root          #fix cannot open display: :0 error
-exec --no-startup-id xrdb -merge ~/.Xdefaults          #use colours and font from Xdefaults ( for sxiv and other apps )
+#exec --no-startup-id xhost +SI:localuser:root          #fix cannot open display: :0 error
+#better and secure alternative is using a polkit as mentioned here 
+#    https://www.reddit.com/r/swaywm/comments/r1218i/this_is_my_sway_is_fantastic_post/
+#or use `sudo -E program`
+#exec --no-startup-id xrdb -merge ~/.Xdefaults          #use colours and font from Xdefaults ( for sxiv and other apps )
 
 #Start window in floating mode
-for_window [class="copyq"] floating enable
+for_window [app_id="copyq"] floating enable
+for_window [app_id="gnome-pomodoro"] floating enable
+
